[metadata]
# replace with your username:
name = iiif-image-load
version = 0.1.4
author = Bronson Brown-deVost
author_email = bronsonbdevost@gmail.com
description = A python library that loads iiif images (IIIF Image Api Manifests) into a cv2 numpy array
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bronson-Brown-deVost/iiif_image_load
project_urls =
    Bug Tracker = https://github.com/Bronson-Brown-deVost/iiif_image_load/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src